src/objects/Lead_Assignment_Table__c.object
<CustomObject>
    <fields>
        <fullName>Assign_to_Queue__c</fullName>
        <label>Assign to Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Assignee</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Lead_Assignment_Tables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Company Internet</fullName>
                </value>
                <value>
                    <fullName>Company Fiber</fullName>
                </value>
                <value>
                    <fullName>Virtual Voice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Lead Assignment Table</label>
    <nameField>
        <displayFormat>LAT-{000000}</displayFormat>
        <label>Lead Assignment Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Assignment Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>